# platanus-hack-25-team-21

./: .env  .gitignore  .mcp.json  docker-compose.yml
backend/: Dockerfile  pyproject.toml  test_fraud_detection.py
backend/alembic/: env.py
backend/alembic/versions/: ca43cb9fea88_initial.py
backend/app/: config.py  main.py  schemas.py  workflow.py
backend/app/agents/: fraud_detection_agent.py  plan_agent.py  ranking_agent.py  simple_agent.py  summary_agent.py
backend/app/prompts/: fraud_detection_agent.py
backend/app/tools/: download_buyer_attachment.py  read_award_result.py  read_award_result_attachment_doc.py  read_buyer_attachment_doc.py
backend/app/utils/: build_ranking_input.py  get_tender.py  websocket_manager.py
frontend/: Dockerfile  package.json  pnpm-lock.yaml
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: TaskCard.tsx
frontend/src/pages/: Detail.css  Detail.tsx  Explore.tsx  index.astro
