[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.3",
    "langchain>=1.0.8",
    "langchain-anthropic>=1.1.0",
    "langgraph>=1.0.3",
    "pydantic-settings>=2.12.0",
    "uvicorn[standard]>=0.38.0",
]
